micro/.metadata/.plugins/org.eclipse.cdt.ui/Clase27-06.build.log
17:17:54 **** Incremental Build of configuration Debug for project Clase27-06 ****
make -r -j4 all 
Building file: ../src/main.c
Building file: ../src/mtb.c
Invoking: MCU C Compiler
arm-none-eabi-gcc -DDEBUG -D__CODE_RED -DCORE_M0PLUS -D__MTB_BUFFER_SIZE=256 -D__USE_ROMDIVIDE -D__LPC84X__ -D__REDLIB__ -O0 -fno-common -g3 -Wall -c -fmessage-length=0 -fno-builtin -ffunction-sections -fdata-sections -fmerge-constants -fmacro-prefix-map="../src/"= -mcpu=cortex-m0 -mthumb -fstack-usage -specs=redlib.specs -MMD -MP -MF"src/main.d" -MT"src/main.o" -MT"src/main.d" -o "src/main.o" "../src/main.c"
Invoking: MCU C Compiler
arm-none-eabi-gcc -DDEBUG -D__CODE_RED -DCORE_M0PLUS -D__MTB_BUFFER_SIZE=256 -D__USE_ROMDIVIDE -D__LPC84X__ -D__REDLIB__ -O0 -fno-common -g3 -Wall -c -fmessage-length=0 -fno-builtin -ffunction-sections -fdata-sections -fmerge-constants -fmacro-prefix-map="../src/"= -mcpu=cortex-m0 -mthumb -fstack-usage -specs=redlib.specs -MMD -MP -MF"src/mtb.d" -MT"src/mtb.o" -MT"src/mtb.d" -o "src/mtb.o" "../src/mtb.c"
../src/main.c:59:1: error: expected identifier or '(' before '}' token
   59 | }
      | ^
make[1]: *** [src/subdir.mk:40: src/main.o] Error 1
make[1]: *** Waiting for unfinished jobs....
Finished building: ../src/mtb.c
 
make: *** [makefile:35: all] Error 2
"make -r -j4 all" terminated with exit code 2. Build might be incomplete.

17:17:55 Build Failed. 4 errors, 0 warnings. (took 581ms)

